fixed format on small screens

--- a/style.css
+++ b/style.css
@@ -464,13 +464,13 @@ footer {
 		height: 6em;
 	}
 	.questionDiv {
-		width: 63%;
-		height: 50%
-		margin-left:0;
+		width: 70%;
+		height: 60%;
 
 	}
 	.qSpan {
-		width: 80%;
+		width: 90%;
+		height: 40%
 
 	}
 	.image {
@@ -482,7 +482,7 @@ footer {
 	main {
 		height: 77vh;
 		width: 340px;
-		font-size: 6px;
+		font-size: 1em;
 
 	}
 
@@ -505,10 +505,14 @@ footer {
 	}
 
 	#answerModal {
+			width: 70%;
+		height: 60%;
 
 	}
 	#answerModalAnswers {
-
+	width: 90%;
+		height: 60%;
+		line-height: 1em;
 	}
 	.reload {
 	
